# parquet-metadata-viewer

./: Cargo.toml  README.md  crypto_price.parquet
datasets/citywide_payroll_data/Fiscal_Year=2014/: .part-00003-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc  .part-00004-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc
datasets/citywide_payroll_data/Fiscal_Year=2015/: .part-00001-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc  .part-00002-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc  .part-00003-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc  part-00001-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet
datasets/citywide_payroll_data/Fiscal_Year=2016/: .part-00000-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc  .part-00001-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc  .part-00002-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc  part-00000-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet
datasets/citywide_payroll_data/Fiscal_Year=2017/: .part-00004-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc  .part-00005-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc
datasets/citywide_payroll_data/Fiscal_Year=2018/: .part-00005-4ff60186-1429-4338-aacf-47712fe38ec8.c000.snappy.parquet.crc  (+1 more)
src/: main.rs  parquet_metadata_viewer_1.rs  parquet_metadata_viewer_2.rs  parquet_metadata_viewer_3.rs  parquet_metadata_viewer_4.rs  rust_parquet_1.rs  rust_parquet_2.rs  rust_parquet_3.rs  rust_parquet_4.rs
(+6 files in other folders)
