[package]
name = "rust-parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.1.2", features = ["derive"] }
glob = "0.3.0"

# Parquet Crates
parquet = "11.0.0"
parquet_derive = "11.0.0"