[package]
name = "parquet-metadata-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
glob = "0.3.0"

# Parquet Crates
parquet = "11.1.0"

# JSON
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
